<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/input_entry_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/input_entry_title_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="insideOverlay"
        >
        <TextView
            android:layout_marginTop="0dp"
            android:id="@+id/input_entry_label_title"
            android:maxWidth="100dp"
            style="@style/AppTheme.TextAppearance.InputLabel"
            android:text="@string/input_entry_title_label"/>
        <EditText
            style="@style/AppTheme.TextAppearance.InputEditText"
            android:id="@+id/input_entry_title"
            android:hint="@string/input_entry_title_hint"
            />

    </LinearLayout>


    <TextView
        android:id="@+id/input_entry_label_content"
        style="@style/AppTheme.TextAppearance.InputLabel"
        android:layout_width="match_parent"
        android:text="@string/entry_input_content_label"
        android:textAlignment="viewStart"
        />

    <EditText
        android:id="@+id/input_entry_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="start"
        android:inputType="text|textLongMessage|textMultiLine"
        android:hint="@string/input_entry_content_hint"
        android:textAlignment="viewStart" />



    <!-- See https://stackoverflow.com/a/11081977 for inspiration -->


    <TextView
        android:layout_marginTop="0dp"
        style="@style/AppTheme.TextAppearance.InputLabel"
        android:layout_width="match_parent"
        android:text="@string/input_entry_mood_label"
        android:textAlignment="center"
        />


    <RadioGroup
        android:id="@+id/input_entry_mood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <online.madeofmagicandwires.journal.MoodRadioButton
            android:id="@+id/input_entry_mood_angry"
            style="@style/AppTheme.EmojiRadioButton"
            android:text="@string/emoji_angry"
            app:moodValue="angry"
            />

        <online.madeofmagicandwires.journal.MoodRadioButton
            android:id="@+id/input_entry_mood_bored"
            style="@style/AppTheme.EmojiRadioButton"
            android:text="@string/emoji_bored"
            app:moodValue="bored"
            />

        <online.madeofmagicandwires.journal.MoodRadioButton
            android:id="@+id/input_entry_mood_happy"
            style="@style/AppTheme.EmojiRadioButton"
            android:text="@string/emoji_happy"
            app:moodValue="happy"
            />

        <online.madeofmagicandwires.journal.MoodRadioButton
            android:id="@+id/input_entry_mood_sad"
            style="@style/AppTheme.EmojiRadioButton"
            android:text="@string/emoji_sad"
            app:moodValue="sad"
            />
    </RadioGroup>

</LinearLayout>


    <!--
    See https://stackoverflow.com/a/11081977 for inspiration
-->
